--- a/index.html
+++ b/index.html
@@ -23,42 +23,31 @@
                                 class="active" aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="1"
                                 aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
+                           
                         </div>
 
 
-                        <a href="0413(2).html">
-                            <div class="carousel-inner">
-                            </div>
-                        </a>
+                        <a href="0419.html">
 
 
                         <div class="carousel-inner">
-                            <div data-bs-interval="1000" class="carousel-item active">
-                                <img src="img/01.jpg" class="d-block w-100" alt="...">
+                            <div data-bs-interval="3000" class="carousel-item active">
+                                <img src="img/1.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5 class="text-dark">1 slide label</h5>
-                                    <p class="text-primary">Some representative placeholder content for the first slide.
+                                    <h5 class="text-dark h1">雞肉飯</h5>
+                                    <p class="text-primary h2">嘉義雞肉飯好吃
                                     </p>
                                 </div>
                             </div>
-                            <div data-bs-interval="1000" class="carousel-item">
-                                <img src="img/02.jpg" class="d-block w-100" alt="...">
+                            <div data-bs-interval="3000" class="carousel-item">
+                                <img src="img/2.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5 class="text-dark">2 slide label</h5>
-                                    <p class="text-primary">Some representative placeholder content for the first slide.
+                                    <h5 class="text-dark h1">羊</h5>
+                                    <p class="text-primary h2">數媒系 B11035*41 張*偉
                                     </p>
                                 </div>
                             </div>
-                            <div data-bs-interval="1000" class="carousel-item">
-                                <img src="img/03.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5 class="text-dark">3 slide label</h5>
-                                    <p class="text-primary">Some representative placeholder content for the first slide.
-                                    </p>
-                                </div>
-                            </div>
+                            
                         </div>
 
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
