--- a/social.html
+++ b/social.html
@@ -215,7 +215,7 @@
         <p>플레이브</p>
     </div>
 
-    <a href="首頁.html" target="_blank" style="color: inherit; text-decoration: none;">
+    <a href="index.html" target="_blank" style="color: inherit; text-decoration: none;">
         <img class="home-image" src="img/71.png" alt="">
     </a>
     
