--- a/mv.html
+++ b/mv.html
@@ -269,7 +269,7 @@
 
     <div class=" box1 "> </div>
 
-    <a href="首頁.html" target="_blank" style="color: inherit; text-decoration: none;">
+    <a href="index.html" target="_blank" style="color: inherit; text-decoration: none;">
         <img class="home-image" src="img/71.png" alt="">
     </a>
 
